change subit color from primary to success

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <input type="number" name="to" id="to" class="form-control" placeholder="Enter To Value" >
                             </div>
                             <div class="form-group">
-                                <button id="calculate" class="btn btn-primary btn-block">=</button>
+                                <button id="calculate" class="btn btn-success btn-block">=</button>
                             </div>
                             <div class="form-group">
                                 <label for="to">Answer</label>
