--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                                 <button id="calculate" class="btn btn-success btn-block">=</button>
                             </div>
                             <div class="form-group">
-                                <label for="to">Answer</label>
-                                <input type="text" name="to" id="to" class="form-control" placeholder="Enter To Value" readonly>
+                                <label for="answer">Answer</label>
+                                <input type="text" name="answer" id="answer" class="form-control" placeholder="Enter To Value">
                             </div>
                         </div>
                     </div>
